@@ -76,6 +76,8 @@ all : $(LIGHT) $(VIS) $(QBSP) $(BSPINFO)
 	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
 %.o: $(COMMONDIR)/%.c
 	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
+%.o: $(LIBS_DIR)/common/%.c
+	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
 
 # Objects
 COMMONOBJS= cmdlib.o \
