@@ -73,6 +73,8 @@ all : $(PAKX) $(PAKLIST)
 	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
 %.o: $(COMMONDIR)/%.c
 	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
+%.o: $(LIBS_DIR)/common/%.c
+	$(CC) -c $(CFLAGS) $(INCLUDES) -o $@ $<
 
 # Objects
 COMMONOBJS= cmdlib.o \
